validator_derive/tests/compile-fail/custom_not_string.stderr
error: Invalid attribute #[validate] on field `s`: invalid argument for `custom` validator: only strings are allowed
 --> $DIR/custom_not_string.rs:5:25
  |
5 |     #[validate(custom = 2)]
  |                         ^
